// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / FlexTable / With Different Rows Default Rows 1`] = `
.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c2 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c19 {
  color: #A0A09B;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c18 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c17 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c17,
.c17[type='button'],
.c17[type='reset'],
.c17[type='submit'] {
  -webkit-appearance: button;
}

.c17::-moz-focus-inner,
.c17[type='button']::-moz-focus-inner,
.c17[type='reset']::-moz-focus-inner,
.c17[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c17:-moz-focusring,
.c17[type='button']:-moz-focusring,
.c17[type='reset']:-moz-focusring,
.c17[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c8 {
  width: inherit;
}

.c10 {
  font-size: 14px;
  line-height: 20px;
}

.c14 {
  overflow: hidden;
  padding-top: 5px !important;
  padding-bottom: 5px;
}

.c16 {
  padding-top: 0 !important;
  padding-bottom: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c12 {
  display: none;
  margin-left: -4px;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c3 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-left: 0px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c3 > *:first-child {
  padding-left: 0;
}

.c3 > *:nth-last-child(2) {
  padding-right: 0;
}

.c13 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-left: 0px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c13:hover {
  background: #F5F5F5;
}

.c13 > *:first-child {
  padding-left: 0;
}

.c13 > *:nth-last-child(2) {
  padding-right: 0;
}

.c4 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c6 {
  overflow: hidden;
  padding-top: 5px !important;
  padding-bottom: 5px;
}

.c1 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1600px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c11 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (min-width:976px) {
  .c12 {
    -webkit-flex: 0 40px;
    -ms-flex: 0 40px;
    flex: 0 40px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    role="table"
  >
    <div
      className="c2 c3 c4"
      role="row"
    >
      <div
        className="c5 c6"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c5 c6"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c5 c6"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          >
            Header 3
          </span>
        </div>
      </div>
      <div
        className="c11 c6 c12"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          />
        </div>
      </div>
    </div>
    <div
      className="c2 c13"
      role="row"
    >
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Default
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Default
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Default
          </span>
        </div>
      </div>
      <div
        className="c11 c14 c16 c12"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-sc-ey7f5x-0 c17"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c18"
          >
            <svg
              aria-hidden="true"
              className="c19"
              focusable="false"
              height={8}
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              width={8}
            >
              <path
                d="M0 .59l4 4 4-4v2.828l-4 4-4-4V.59z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c2 c13"
      role="row"
    >
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Default
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Default
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Default
          </span>
        </div>
      </div>
      <div
        className="c11 c14 c16 c12"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-sc-ey7f5x-0 c17"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c18"
          >
            <svg
              aria-hidden="true"
              className="c19"
              focusable="false"
              height={8}
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              width={8}
            >
              <path
                d="M0 .59l4 4 4-4v2.828l-4 4-4-4V.59z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c2 c13"
      role="row"
    >
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Default
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Default
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Default
          </span>
        </div>
      </div>
      <div
        className="c11 c14 c16 c12"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-sc-ey7f5x-0 c17"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c18"
          >
            <svg
              aria-hidden="true"
              className="c19"
              focusable="false"
              height={8}
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              width={8}
            >
              <path
                d="M0 .59l4 4 4-4v2.828l-4 4-4-4V.59z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / With Different Rows With Colored Separators 1`] = `
.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c2 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c19 {
  color: #A0A09B;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c18 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c17 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c17,
.c17[type='button'],
.c17[type='reset'],
.c17[type='submit'] {
  -webkit-appearance: button;
}

.c17::-moz-focus-inner,
.c17[type='button']::-moz-focus-inner,
.c17[type='reset']::-moz-focus-inner,
.c17[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c17:-moz-focusring,
.c17[type='button']:-moz-focusring,
.c17[type='reset']:-moz-focusring,
.c17[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c8 {
  width: inherit;
}

.c10 {
  font-size: 14px;
  line-height: 20px;
}

.c14 {
  overflow: hidden;
  padding-top: 5px !important;
  padding-bottom: 5px;
}

.c16 {
  padding-top: 0 !important;
  padding-bottom: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c12 {
  display: none;
  margin-left: -4px;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c3 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-left: 0px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c3 > *:first-child {
  padding-left: 0;
}

.c3 > *:nth-last-child(2) {
  padding-right: 0;
}

.c13 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-left: 0px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #D2F500;
}

.c13:hover {
  background: #F5F5F5;
}

.c13 > *:first-child {
  padding-left: 0;
}

.c13 > *:nth-last-child(2) {
  padding-right: 0;
}

.c20 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-left: 0px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #00F0E1;
}

.c20:hover {
  background: #F5F5F5;
}

.c20 > *:first-child {
  padding-left: 0;
}

.c20 > *:nth-last-child(2) {
  padding-right: 0;
}

.c21 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-left: 0px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #FFCF00;
}

.c21:hover {
  background: #F5F5F5;
}

.c21 > *:first-child {
  padding-left: 0;
}

.c21 > *:nth-last-child(2) {
  padding-right: 0;
}

.c4 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c6 {
  overflow: hidden;
  padding-top: 5px !important;
  padding-bottom: 5px;
}

.c1 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1600px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c11 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (min-width:976px) {
  .c12 {
    -webkit-flex: 0 40px;
    -ms-flex: 0 40px;
    flex: 0 40px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    role="table"
  >
    <div
      className="c2 c3 c4"
      role="row"
    >
      <div
        className="c5 c6"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c5 c6"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c5 c6"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          >
            Header 3
          </span>
        </div>
      </div>
      <div
        className="c11 c6 c12"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          />
        </div>
      </div>
    </div>
    <div
      className="c2 c13"
      role="row"
    >
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator color set
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator color set
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator color set
          </span>
        </div>
      </div>
      <div
        className="c11 c14 c16 c12"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-sc-ey7f5x-0 c17"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c18"
          >
            <svg
              aria-hidden="true"
              className="c19"
              focusable="false"
              height={8}
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              width={8}
            >
              <path
                d="M0 .59l4 4 4-4v2.828l-4 4-4-4V.59z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c2 c20"
      role="row"
    >
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator color set
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator color set
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator color set
          </span>
        </div>
      </div>
      <div
        className="c11 c14 c16 c12"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-sc-ey7f5x-0 c17"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c18"
          >
            <svg
              aria-hidden="true"
              className="c19"
              focusable="false"
              height={8}
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              width={8}
            >
              <path
                d="M0 .59l4 4 4-4v2.828l-4 4-4-4V.59z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c2 c21"
      role="row"
    >
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator color set
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator color set
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator color set
          </span>
        </div>
      </div>
      <div
        className="c11 c14 c16 c12"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-sc-ey7f5x-0 c17"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c18"
          >
            <svg
              aria-hidden="true"
              className="c19"
              focusable="false"
              height={8}
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              width={8}
            >
              <path
                d="M0 .59l4 4 4-4v2.828l-4 4-4-4V.59z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / With Different Rows With Hidden Separator 1`] = `
.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c2 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c19 {
  color: #A0A09B;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c18 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c17 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c17,
.c17[type='button'],
.c17[type='reset'],
.c17[type='submit'] {
  -webkit-appearance: button;
}

.c17::-moz-focus-inner,
.c17[type='button']::-moz-focus-inner,
.c17[type='reset']::-moz-focus-inner,
.c17[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c17:-moz-focusring,
.c17[type='button']:-moz-focusring,
.c17[type='reset']:-moz-focusring,
.c17[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c8 {
  width: inherit;
}

.c10 {
  font-size: 14px;
  line-height: 20px;
}

.c14 {
  overflow: hidden;
  padding-top: 5px !important;
  padding-bottom: 5px;
}

.c16 {
  padding-top: 0 !important;
  padding-bottom: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c12 {
  display: none;
  margin-left: -4px;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c3 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-left: 0px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c3 > *:first-child {
  padding-left: 0;
}

.c3 > *:nth-last-child(2) {
  padding-right: 0;
}

.c13 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-left: 0px;
  border-left: 2px solid transparent;
}

.c13:hover {
  background: #F5F5F5;
}

.c13 > *:first-child {
  padding-left: 0;
}

.c13 > *:nth-last-child(2) {
  padding-right: 0;
}

.c4 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c6 {
  overflow: hidden;
  padding-top: 5px !important;
  padding-bottom: 5px;
}

.c1 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1600px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c11 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (min-width:976px) {
  .c12 {
    -webkit-flex: 0 40px;
    -ms-flex: 0 40px;
    flex: 0 40px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    role="table"
  >
    <div
      className="c2 c3 c4"
      role="row"
    >
      <div
        className="c5 c6"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c5 c6"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c5 c6"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          >
            Header 3
          </span>
        </div>
      </div>
      <div
        className="c11 c6 c12"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          />
        </div>
      </div>
    </div>
    <div
      className="c2 c13"
      role="row"
    >
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator hidden
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator hidden
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator hidden
          </span>
        </div>
      </div>
      <div
        className="c11 c14 c16 c12"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-sc-ey7f5x-0 c17"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c18"
          >
            <svg
              aria-hidden="true"
              className="c19"
              focusable="false"
              height={8}
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              width={8}
            >
              <path
                d="M0 .59l4 4 4-4v2.828l-4 4-4-4V.59z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c2 c13"
      role="row"
    >
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator hidden
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator hidden
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator hidden
          </span>
        </div>
      </div>
      <div
        className="c11 c14 c16 c12"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-sc-ey7f5x-0 c17"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c18"
          >
            <svg
              aria-hidden="true"
              className="c19"
              focusable="false"
              height={8}
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              width={8}
            >
              <path
                d="M0 .59l4 4 4-4v2.828l-4 4-4-4V.59z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c2 c13"
      role="row"
    >
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator hidden
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator hidden
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator hidden
          </span>
        </div>
      </div>
      <div
        className="c11 c14 c16 c12"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-sc-ey7f5x-0 c17"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c18"
          >
            <svg
              aria-hidden="true"
              className="c19"
              focusable="false"
              height={8}
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              width={8}
            >
              <path
                d="M0 .59l4 4 4-4v2.828l-4 4-4-4V.59z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / With Different Rows Without Hover Highlight 1`] = `
.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c2 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c18 {
  color: #A0A09B;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c14 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c17 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c16 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c16,
.c16[type='button'],
.c16[type='reset'],
.c16[type='submit'] {
  -webkit-appearance: button;
}

.c16::-moz-focus-inner,
.c16[type='button']::-moz-focus-inner,
.c16[type='reset']::-moz-focus-inner,
.c16[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c16:-moz-focusring,
.c16[type='button']:-moz-focusring,
.c16[type='reset']:-moz-focusring,
.c16[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c8 {
  width: inherit;
}

.c10 {
  font-size: 14px;
  line-height: 20px;
}

.c13 {
  overflow: hidden;
  padding-top: 5px !important;
  padding-bottom: 5px;
}

.c15 {
  padding-top: 0 !important;
  padding-bottom: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c12 {
  display: none;
  margin-left: -4px;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c3 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-left: 0px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c3 > *:first-child {
  padding-left: 0;
}

.c3 > *:nth-last-child(2) {
  padding-right: 0;
}

.c4 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c6 {
  overflow: hidden;
  padding-top: 5px !important;
  padding-bottom: 5px;
}

.c1 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1600px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c11 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (min-width:976px) {
  .c12 {
    -webkit-flex: 0 40px;
    -ms-flex: 0 40px;
    flex: 0 40px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    role="table"
  >
    <div
      className="c2 c3 c4"
      role="row"
    >
      <div
        className="c5 c6"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c5 c6"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c5 c6"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          >
            Header 3
          </span>
        </div>
      </div>
      <div
        className="c11 c6 c12"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          />
        </div>
      </div>
    </div>
    <div
      className="c2 c3"
      role="row"
    >
      <div
        className="c5 c13"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c14 c10"
          >
            No hover highlight
          </span>
        </div>
      </div>
      <div
        className="c5 c13"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c14 c10"
          >
            No hover highlight
          </span>
        </div>
      </div>
      <div
        className="c5 c13"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c14 c10"
          >
            No hover highlight
          </span>
        </div>
      </div>
      <div
        className="c11 c13 c15 c12"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-sc-ey7f5x-0 c16"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c17"
          >
            <svg
              aria-hidden="true"
              className="c18"
              focusable="false"
              height={8}
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              width={8}
            >
              <path
                d="M0 .59l4 4 4-4v2.828l-4 4-4-4V.59z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c2 c3"
      role="row"
    >
      <div
        className="c5 c13"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c14 c10"
          >
            No hover highlight
          </span>
        </div>
      </div>
      <div
        className="c5 c13"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c14 c10"
          >
            No hover highlight
          </span>
        </div>
      </div>
      <div
        className="c5 c13"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c14 c10"
          >
            No hover highlight
          </span>
        </div>
      </div>
      <div
        className="c11 c13 c15 c12"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-sc-ey7f5x-0 c16"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c17"
          >
            <svg
              aria-hidden="true"
              className="c18"
              focusable="false"
              height={8}
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              width={8}
            >
              <path
                d="M0 .59l4 4 4-4v2.828l-4 4-4-4V.59z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c2 c3"
      role="row"
    >
      <div
        className="c5 c13"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c14 c10"
          >
            No hover highlight
          </span>
        </div>
      </div>
      <div
        className="c5 c13"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c14 c10"
          >
            No hover highlight
          </span>
        </div>
      </div>
      <div
        className="c5 c13"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c14 c10"
          >
            No hover highlight
          </span>
        </div>
      </div>
      <div
        className="c11 c13 c15 c12"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-sc-ey7f5x-0 c16"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c17"
          >
            <svg
              aria-hidden="true"
              className="c18"
              focusable="false"
              height={8}
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              width={8}
            >
              <path
                d="M0 .59l4 4 4-4v2.828l-4 4-4-4V.59z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
